[package]
name = "toybox"
version = "0.1.0"
authors = ["moca-f <1119369173@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "tb_editor",
    "tb_ecs"
]

[dependencies]
tb_core = { path = "tb_core" }
tb_ecs = { path = "tb_ecs" }
tb_app = { path = "tb_app" }

[features]
editor = []
