[package]
name = "toybox"
version = "0.1.0"
authors = ["mingyuan-f <1119369173@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "tb_core",
    "tb_engine",
    "tb_storage",
    "tb_ecs",
    "tb_ecs_macro",
    "tb_gameplay",
    "tb_app",
    "tb_editor",
]

[dependencies]
tb_core = { path = "tb_core" }
tb_engine = { path = "tb_engine" }
tb_ecs = { path = "tb_ecs" }
tb_esc_macro = { path = "tb_ecs_macro" }
tb_gameplay = { path = "tb_gameplay" }
tb_app = { path = "tb_app" }

[features]
editor = ["tb_gameplay/editor"]
client = ["tb_gameplay/client"]
server = ["tb_gameplay/server"]
