[package]
name = "toybox"
version = "0.1.0"
authors = ["dahai-f <1119369173@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "example_pong",
    "plugins/script_ts",
    "tb_core",
    "tb_engine",
    "tb_ecs",
    "tb_ecs_macro",
    "tb_gameplay",
    "tb_app",
    "tb_editor",
    "tb_plugin",
]

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
error-chain = "0.12.4"
tb_core = { path = "tb_core" }
tb_engine = { path = "tb_engine" }
tb_ecs = { path = "tb_ecs" }
tb_ecs_macro = { path = "tb_ecs_macro" }
tb_gameplay = { path = "tb_gameplay" }
tb_app = { path = "tb_app" }
tb_plugin = { path = "tb_plugin" }
