[package]
name = "tb_core"
version = "0.1.0"
authors = ["dahai-f <1119369173@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
rayon = "1.5.0"
nalgebra = { version = "0.27.1", features = ["serde-serialize"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["arbitrary_precision"] }
serde_box = { version = "0.1.0", git = "https://github.com/dahai-f/serde_box.git" }

[dev-dependencies]
rand = "0.8.3"
