[package]
name = "tb_ecs"
version = "0.1.0"
authors = ["dahai-f <1119369173@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tb_core = { path = "../tb_core" }
tb_ecs_macro = { path = "../tb_ecs_macro" }
rayon = "1.5.0"
inventory = "0.1.9"
bit-set = "0.5.2"
crossbeam = "0.8.0"
dashmap = "4.0.2"
