[package]
name = "tb_ecs"
version = "0.1.0"
authors = ["dahai-f <1119369173@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tb_core = { path = "../tb_core" }
tb_ecs_macro = { path = "../tb_ecs_macro" }

serde_box = { version = "0.1.0", git = "https://github.com/dahai-f/serde_box.git" }

rayon = "1.5.0"
inventory = "0.1.10"
bit-set = "0.5.2"
dashmap = { version = "4.0.2", features = ["rayon"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["arbitrary_precision"] }
