[package]
name = "tb_engine"
version = "0.1.0"
authors = ["mingyuan-f <1119369173@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tb_core = { path = "../tb_core" }
tb_ecs = { path = "../tb_ecs" }
tb_storage = { path = "../tb_storage" }
tb_proc_macro = { path = "../tb_proc_macro" }
bimap = "0.5.3"
hibitset = "0.6.3"

[features]
editor = []
client = []
server = []
