[package]
name = "tb_gameplay"
version = "0.1.0"
authors = ["mingyuan-f <1119369173@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tb_engine = { path = "../tb_engine" }

[features]
editor = ["tb_engine/editor"]
client = ["tb_engine/client"]
server = ["tb_engine/server"]