[package]
name = "tb_proc_macro"
version = "0.1.0"
authors = ["mingyuan-f <1119369173@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.7"
syn = { version = "1.0.51", features = ["full"] }
proc-macro2 = "1.0.24"

[lib]
proc-macro = true
